# uiforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/uiforge/: __init__.py  __main__.py  models.py
src/uiforge/pipeline/: analyzer.py  generator.py  scaffolder.py
tests/: test_analyzer.py  test_models.py  test_scaffolder.py
