[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uiforge-cli"
version = "0.1.0"
description = "Convert any UI screenshot into production-ready React components"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "UIForge contributors" }]
keywords = ["react", "ui", "screenshot", "code-generation", "tailwind", "cli", "developer-tools", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "hatch>=1.9.0",
]

[project.scripts]
uiforge = "uiforge.__main__:main"
uf = "uiforge.__main__:main"

[project.urls]
Homepage = "https://github.com/ManavGurjar/uiforge"
Documentation = "https://ManavGurjar.github.io/uiforge"
Repository = "https://github.com/ManavGurjar/uiforge"
"Bug Tracker" = "https://github.com/ManavGurjar/uiforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uiforge"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
